Update to latest elm-spa-version
